Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-4774

[C++][Parquet] Call Table::Validate when writing a table

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 0.11.1, 0.12.1
    • 0.13.0
    • C++
    • Windows 10 16299.431, Python 3.6.4 64-bit, pyarrow 0.11.1
      Windows Linux (WSL) Ubuntu 18.04.1, Python 3.6.5 64-bit, pyarrow 0.12.1

    Description

      When writing a table to a parquet file that contains both flat arrays of different leng

      Reproducer:

      
      import pyarrow as pa
      import pyarrow.parquet as pq
      import numpy as np
      
      array1 = np.array([0, 1, 2], dtype=np.uint8)
      array2 = np.array([[0,1,2], [3, 4, 5]], dtype=np.uint8).T
      
      t1 = pa.uint8()
      t2 = pa.list_(pa.uint8())
      
      fields = [
          pa.field('a1', t1),
          pa.field('a2', t2)
      ]
      
      myschema = pa.schema(fields)
      
      mytable = pa.Table.from_arrays([
          pa.array(array1, type=t1),
          pa.array([array2[:,0], array2[:,1]], type=t2)],
          schema=myschema)
      
      pq.write_table(mytable, 'example.parquet')
      

      Windows 10 (Python 3.6.4 64-bit, pyarrow 0.11.1) crash code:

      Process finished with exit code -1073741819 (0xC0000005)
      

      WSL (Python 3.6.5 64-bit, pyarrow 0.12.1) Crash code:

      Segmentation fault (core dumped)
      

      Attachments

        Issue Links

          Activity

            People

              fsaintjacques Francois Saint-Jacques
              stephen.gallagher Stephen Gallagher
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m