ARROW-4774: [C++] Fix FileWriter::WriteTable segfault

FileWriter expects a well-formed Table where all columns are of equal
lengths.

- WriteTable checks if the table is valid
- Python ensure that a table is valid before wrapping it

Author: François Saint-Jacques <fsaintjacques@gmail.com>

Closes #3846 from fsaintjacques/ARROW-4774-segfault-parquet-struct and squashes the following commits:

4461ba959 <François Saint-Jacques> Python formating
ae4857091 <François Saint-Jacques> ARROW-4774:  Fix FileWriter::WriteTable segfault